--- a/index.html
+++ b/index.html
@@ -1,28 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>eCommerce - HTML</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Lojinha de Teclados do Douglas</h1>
-
-    <p>Nesta loja disponibilizo os melhores produtos de informática do mundo. Nela você pode comprar o que quiser pelo melhor preço e qualidade.</p>
-
+    <p>
+      Nesta loja disponibilizo os melhores produtos de informática do mundo.
+      Nela você pode comprar o que quiser pelo melhor preço e qualidade.
+    </p>
+    
     <p>Veja a nossa lista de teclados disponíveis:</p>
-
     <ul>
-        <li>Keycron K2</li>
-        <li>OLKB Plank</li>
-        <li>Ergo Dox</li>
+      <li>Keycron K2</li>
+      <li>OLKB Plank</li>
+      <li>Ergo Dox</li>
     </ul>
 
     <section class="teclado">
-        <h2># Keycron K2</h2>
-        <p>Um teclado bluetooth com ótimo alcance, que usa as switch <em>Cherry Red</em> excelentes para games. Possui <strong>iluminação RGB</strong> com mais de 10 efeitos diferentes.</p>
-        Ver mais detalhes e Preço do Keycron K2
+      <h2># Keycron K2</h2>
+      <p>
+        Um teclado bluetooth com ótimo alcance, que usa as switch
+        <em>Cherry Red</em> excelentes para games. Possui
+        <strong>iluminação RGB</strong> com mais de 10 efeitos diferentes.
+      </p>
+      Ver mais detalhes e Preço do Keycron K2
     </section>
-</body>
+    <section class="teclado">
+      <h2># OLKB Plank</h2>
+      <p>
+        Com apenas 44 teclas esse teclado ortolinear vai melhorar sua ergonomia
+        ao trabalhar com código. Suas mão nao precisam fazer um caminho muito
+        longo entre uma tecla e outra. E o melhor, possui firmware QMK o que
+        permite você atualizar gravar quantas macros vc desejar.
+      </p>
+      Ver mais detalhes e Preço do OLKB
+    </section>
+    <section class="teclado">
+      <h2># Ergo Dox</h2>
+      <p>
+        Falando em teclado ergonomico e que aceita macros, nao podemos deixar de
+        apresentar o Ergo Dox. Um teclado revolucionario que te ensinará a
+        digitar novamente.
+      </p>
+      Ver mais detalhes e Preço Ergo Dox
+    </section>
+
+    <p>Teclados mais vendidos:</p>
+    <ol>
+      <li>OLKB Plank</li>
+      <li>Ergo Dox</li>
+      <li>Keycron K2</li>
+    </ol>
+    <p>Se você quiser, entre em contato pelo formulário abaixo:</p>
+
+    <form action="" method="">
+      <label for="">Nome:</label>
+      <input name="nome" id="nome" type="text" placeholder="Digite seu Nome">
+      <label for="">Email:</label>
+      <input name="email" id="email" type="email" placeholder="Digite seu Email">
+      <label for="">Mensagem:</label>
+      <textarea name="mensagem" id="mensagem" cols="30" rows="1" placeholder="Deixe uma menssagem"></textarea>
+      <button>Enviar</button>
+    </form>
+  
+    <footer>
+      <p>Siga-nos nas nossas mídias sociais</p>
+      [Instagram] => https://Instagram.com/douglascorrea.io
+      [Youtube]  => https://youtube.com/c/douglascorrea
+    </footer>
+  </body>
 </html>
