Finalizado primeiro teclado com link para pagina especifica

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
         <em>Cherry Red</em> excelentes para games. Possui
         <strong>iluminação RGB</strong> com mais de 10 efeitos diferentes.
       </p>
-      Ver mais detalhes e Preço do Keycron K2
+      <img style="width: 300px;" src="imagens/keycron.jpg" alt="Teclado Keycron K2">
+      <div>
+        <a href="teclados/keycron.html">Ver mais detalhes e Preço do Keycron K2</a>
+      </div>
     </section>
     <section class="teclado">
       <h2># OLKB Plank</h2>
@@ -37,7 +40,7 @@
         longo entre uma tecla e outra. E o melhor, possui firmware QMK o que
         permite você atualizar gravar quantas macros vc desejar.
       </p>
-      Ver mais detalhes e Preço do OLKB
+      <a href="#">Ver mais detalhes e Preço do OLKB</a>
     </section>
     <section class="teclado">
       <h2># Ergo Dox</h2>
@@ -46,7 +49,7 @@
         apresentar o Ergo Dox. Um teclado revolucionario que te ensinará a
         digitar novamente.
       </p>
-      Ver mais detalhes e Preço Ergo Dox
+      <a href="#">Ver mais detalhes e Preço Ergo Dox</a>
     </section>
 
     <p>Teclados mais vendidos:</p>
