--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>eCommerce - HTML</title>
   </head>
   <body>
-    <h1>Lojinha de Teclados do Douglas</h1>
+    <h1>Lojinha de Teclados do Caio</h1>
     <p>
       Nesta loja disponibilizo os melhores produtos de informática do mundo.
       Nela você pode comprar o que quiser pelo melhor preço e qualidade.
@@ -32,16 +32,21 @@
         <a href="teclados/keycron.html">Ver mais detalhes e Preço do Keycron K2</a>
       </div>
     </section>
+
     <section class="teclado">
-      <h2># OLKB Plank</h2>
+      <h2># OLKB Planck</h2>
       <p>
-        Com apenas 44 teclas esse teclado ortolinear vai melhorar sua ergonomia
+        Com apenas <strong>44 teclas</strong> esse teclado ortolinear vai melhorar sua ergonomia
         ao trabalhar com código. Suas mão nao precisam fazer um caminho muito
         longo entre uma tecla e outra. E o melhor, possui firmware QMK o que
-        permite você atualizar gravar quantas macros vc desejar.
+        permite você atualizar gravar <em>quantas macros vc desejar</em>.
       </p>
-      <a href="#">Ver mais detalhes e Preço do OLKB</a>
+      <img style="width: 300px;" src="imagens/plack2.jpg" alt="Teclado Plank">
+      <div>
+        <a href="teclados/plank.html">Ver mais detalhes e Preço do OLKB Planck</a>
+      </div>
     </section>
+
     <section class="teclado">
       <h2># Ergo Dox</h2>
       <p>
@@ -49,7 +54,10 @@
         apresentar o Ergo Dox. Um teclado revolucionario que te ensinará a
         digitar novamente.
       </p>
-      <a href="#">Ver mais detalhes e Preço Ergo Dox</a>
+      <img style="width: 300px;" src="imagens/ergodox2.jpg" alt="">
+      <div>
+        <a href="teclados/ergo_dox.html">Ver mais detalhes e Preço Ergo Dox</a>
+      </div>
     </section>
 
     <p>Teclados mais vendidos:</p>
@@ -58,22 +66,22 @@
       <li>Ergo Dox</li>
       <li>Keycron K2</li>
     </ol>
-    <p>Se você quiser, entre em contato pelo formulário abaixo:</p>
 
-    <form action="" method="">
+    <p>Se você quiser, entre em contato pelo formulário abaixo:</p>
+    <form action="contato" method="">
       <label for="">Nome:</label>
-      <input name="nome" id="nome" type="text" placeholder="Digite seu Nome">
+      <input name="nome" id="nome" type="text" placeholder="Digite seu Nome"><br>
       <label for="">Email:</label>
-      <input name="email" id="email" type="email" placeholder="Digite seu Email">
+      <input name="email" id="email" type="email" placeholder="Digite seu Email"><br>
       <label for="">Mensagem:</label>
-      <textarea name="mensagem" id="mensagem" cols="30" rows="1" placeholder="Deixe uma menssagem"></textarea>
-      <button>Enviar</button>
+      <textarea name="mensagem" id="mensagem" cols="30" rows="1" placeholder="Deixe uma menssagem"></textarea><br>
+      <button type="submit">Enviar</button>
     </form>
   
     <footer>
       <p>Siga-nos nas nossas mídias sociais</p>
-      [Instagram] => https://Instagram.com/douglascorrea.io
-      [Youtube]  => https://youtube.com/c/douglascorrea
+      <a href="https://www.instagram.com/caiofrancolin" target="_blank">Instagram</a>
+      <a href="https://www.facebook.com/caio.francolin" target="_blank">Facebook</a>
     </footer>
   </body>
 </html>
